# Code_reviewer

./: .gitignore  Dockerfile  Makefile  README.md  backend_ii.db  compose.yaml  main.py  pyproject.toml  requirements.txt  test.db
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
app/: main.py
app/ai/: agents.py  crew.py  llm.py  process.py  tasks.py
app/api/: api.py  dependencies.py
app/api/endpoints/: auth.py  submissions.py  users.py
app/crud/: submission.py  user.py
app/db/: session.py
app/models/: __init__.py  base_model.py  models.py  submission_model.py  user_model.py
app/schemas/: __init__.py  base_schema.py  schemas.py  submission.py  submission_schema.py  user.py  user_schema.py
scripts/: check-ollama.sh  check_ollama_simple.py  init-ollama.sh  ollama-init-compose.sh  pull_ollama_models.sh
tests/: conftest.py  conftest_simple.py  test_api.py  test_imports.py  test_smoke.py
uploads/: 2770f649-3f5d-4c1a-811f-7a71055b7a14_login.html  4677d0c4-dc24-4395-97a1-15a2e3a41d7a_crypto_news.py  8b73a60f-d2c6-4f4b-aed0-d126472a0ef3_coin_telegraph.py  dc82ba18-a040-4cd7-9fe1-639cc75d70af_to_scrape_v1.py
